First UI Pass. Placeholder buttons. Fixed text overflow issue.

--- a/src-frontend/src/app/card/card.component.css
+++ b/src-frontend/src/app/card/card.component.css
@@ -1,31 +1,43 @@
+h2 {
+  -webkit-margin-before: 0.4em;
+  -webkit-margin-after: 0.4em;
+  -webkit-margin-start: 5px;
+}
+
+
 .card-container {
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 3px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  padding: 12px;
-  margin: 20px;
+  background-color: rgba(0, 0, 0, 0.08);
+  border-radius: 1px;
+  border-color: rgba(0, 119, 198, 0.7);
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  padding: 5px 0px;
+  margin: 0px;
   text-align: left;
 }
 
-.separator {
-  background-color: rgba(200, 200, 200, 0.5);
-  height: 1px;
-  width: 100%;
-}
-
-.card-code {
-  display: flex;
-}
-.card-code > img {
-  width: 18px;
-  height: 18px;
-  margin: 12px 8px;
-}
 .card-code > div {
   flex: 1;
   overflow-x: scroll;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 0px 3px;
+  margin: 0px 3px;
 }
 
-.card-output {
-  white-space: pre-wrap;
+.card-output > pre {
+  white-space: normal;
+  word-wrap: break-word;
+  padding: 0px 6px;
+}
+
+button {
+  align-items: flex-start;
+  text-align: center;
+  cursor: default;
+  color: inherit;
+  background-color: rgba(255, 255, 255, 0.0);
+  box-sizing: border-box;
+  border-style: none;
+  outline: none;
+  box-shadow: none;
 }
